--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ notifications:
     - dev@joeir.net
 stages:
   - build_publish
+  - release
 before_script:
   - docker login -u "${DH_USERNAME}" -p "${DH_PASSWORD}";
 after_script:
@@ -21,4 +22,14 @@ jobs:
         - IMAGE_NAME=dind
       script:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}"
-        - ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}"
+        - ./.scropts/.publish.sh "${DH_REPO}:${IMAGE_NAME}"
+    - stage: build_publish
+      env:
+        - IMAGE_NAME=awscli
+      script:
+        - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}"
+        - ./.scropts/.publish.sh "${DH_REPO}:${IMAGE_NAME}"
+    - stage: release
+      script:
+        - git checkout ${TRAVIS_BRANCH}
+        - ./.scripts/versioning/iterate -q
