--- a/gkecli/Dockerfile
+++ b/gkecli/Dockerfile
@@ -5,9 +5,9 @@ ARG GCLOUD_SDK_VERSION="177.0.0"
 ARG GCLOUD_SDK_URL="https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${GCLOUD_SDK_VERSION}-linux-x86_64.tar.gz"
 ENV APK_DEPENDENCIES="bash curl git jq python py-pip make docker" \
     PIP_DEPENDENCIES="docker-compose" \
-    DIR_INSTALL=/tmp \
-    DIR_GCLOUD_SDK=${DIR_INSTALL}/google-cloud-sdk \
-    PATH=${DIR_GCLOUD_SDK}/bin:$PATH \
+    DIR_INSTALL=/tmp
+ENV DIR_GCLOUD_SDK=${DIR_INSTALL}/google-cloud-sdk
+ENV PATH=${DIR_GCLOUD_SDK}/bin:$PATH \
     PATHS_TO_REMOVE="\
       /usr/include/* \
       /usr/share/man/* \
