--- a/awscli/Dockerfile
+++ b/awscli/Dockerfile
@@ -1,7 +1,7 @@
 FROM iron/base:3.4
 LABEL maintainer="zephinzer <dev-at-joeir-dot-net>" \
       description="Amazon Web Services CLI image for use in CI pipelines"
-ENV APK_DEPENDENCIES="bash curl git jq python py-pip make docker" \
+ENV APK_DEPENDENCIES="bash curl git jq vim python py-pip make g++ docker" \
     PIP_DEPENDENCIES="awscli" \
     PATHS_TO_REMOVE="\
       /usr/include/* \
