--- a/gkecli/Dockerfile
+++ b/gkecli/Dockerfile
@@ -3,7 +3,7 @@ LABEL maintainer="zephinzer <dev-at-joeir-dot-net>" \
       description="Google Kubernetes Engine deployer image for use in CI pipelines"
 ARG GCLOUD_SDK_VERSION="177.0.0"
 ARG GCLOUD_SDK_URL="https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${GCLOUD_SDK_VERSION}-linux-x86_64.tar.gz"
-ENV APK_DEPENDENCIES="bash curl git jq python py-pip make docker" \
+ENV APK_DEPENDENCIES="bash curl git jq vim python py-pip make docker" \
     PIP_DEPENDENCIES="docker-compose" \
     DIR_INSTALL=/tmp
 ENV DIR_GCLOUD_SDK=${DIR_INSTALL}/google-cloud-sdk
