added [force build]

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,11 @@ jobs:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
         - |
           if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
-            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+            else
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            fi;
           fi;
     - stage: publish
       env:
@@ -33,7 +37,11 @@ jobs:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
         - |
           if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
-            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+            else
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            fi;
           fi;
     - stage: publish
       env:
@@ -42,7 +50,11 @@ jobs:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
         - |
           if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
-            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+            else
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            fi;
           fi;
     - stage: publish
       env:
@@ -51,7 +63,11 @@ jobs:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
         - |
           if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
-            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+            else
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            fi;
           fi;
     - stage: publish
       env:
@@ -60,7 +76,11 @@ jobs:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
         - |
           if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
-            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+            else
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            fi;
           fi;
     - stage: publish
       env:
@@ -69,7 +89,11 @@ jobs:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
         - |
           if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
-            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+            else
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            fi;
           fi;
     - stage: publish
       env:
@@ -79,7 +103,11 @@ jobs:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" NODE_MAJOR_VERSION=${NODE_MAJOR_VERSION};
         - |
           if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
-            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+            else
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            fi;
           fi;
     - stage: publish
       env:
