--- a/.travis.yml
+++ b/.travis.yml
@@ -141,6 +141,19 @@ jobs:
           fi;
     - stage: publish
       env:
+        - IMAGE_NAME: robot-selenium
+      script:
+        - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
+        - |
+          if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
+            if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+            else
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            fi;
+          fi;
+    - stage: publish
+      env:
         - IMAGE_NAME: vtscripts
       script:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
