moved WORKDIR to /app

--- a/dephash/Dockerfile
+++ b/dephash/Dockerfile
@@ -10,7 +10,7 @@ ENV APK_DEPENDENCIES="bash curl git jq vim" \
     PATH_PACKAGE="/dephash" \
     PATH_SYSTEM_BIN="/usr/local/bin" \
     GIT_CLONE_ADDRESS="https://github.com/GovTechSG/dependency-hasher.git"
-WORKDIR ["/"]
+WORKDIR ["/app"]
 USER root
 COPY ./version-info /usr/bin
 RUN apk add --update --upgrade --no-cache ${APK_DEPENDENCIES} \
