--- a/gkecli/Dockerfile
+++ b/gkecli/Dockerfile
@@ -26,4 +26,4 @@ RUN apk add --update --upgrade --no-cache ${APK_DEPENDENCIES} \
     && gcloud components install alpha beta container-builder-local docker-credential-gcr kubectl -q \
     && rm -rf ${PATHS_TO_REMOVE} \
     && chmod +x /usr/bin/version-info
-WORKDIR ["/"]
+WORKDIR /
