--- a/robot-selenium/Dockerfile
+++ b/robot-selenium/Dockerfile
@@ -19,6 +19,7 @@ ENV DATABASELIBRARY  ${DATABASELIBRARY:-0.8.1}
 ENV PABOT  ${PABOT:-0.44}
 ENV PDFMERGE  ${PDFMERGE:-0.0.7}
 ENV FAKER  ${FAKER:-0.8.11}
+ENV PYMYSQL ${PYMYSQL:-0.7.11}
 
 WORKDIR /robot
 
@@ -47,6 +48,7 @@ RUN pip install robotframework-pabot==$PABOT
 RUN pip install robotframework-databaselibrary==$DATABASELIBRARY
 RUN pip install pdfmerge==$PDFMERGE
 RUN pip install faker==$FAKER
+RUN pip install pymysql==$PYMYSQL
 
 RUN pip list
 RUN chrome --version
