Fixed robot-selenium pip library versions not appearing in image tag

--- a/robot-selenium/Dockerfile
+++ b/robot-selenium/Dockerfile
@@ -26,6 +26,8 @@ WORKDIR /robot
 ADD utils/headless-chrome /usr/bin/headless-chrome
 RUN chmod a+x /usr/bin/headless-chrome
 
+COPY ./version-info /usr/bin
+
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
   && echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list \
   && apt-get update \
