Added cx_oracle library

--- a/robot-selenium/Dockerfile
+++ b/robot-selenium/Dockerfile
@@ -53,6 +53,7 @@ RUN pip install pdfmerge==$PDFMERGE
 RUN pip install faker==$FAKER
 RUN pip install pymysql==$PYMYSQL
 RUN pip install SudsLibrary
+RUN pip install cx_Oracle
 
 RUN pip list
 RUN chrome --version
