Add lxml library for Robot image

--- a/robot-selenium/Dockerfile
+++ b/robot-selenium/Dockerfile
@@ -22,6 +22,7 @@ ENV PDFMERGE  ${PDFMERGE:-0.0.7}
 ENV FAKER  ${FAKER:-0.8.11}
 ENV PYMYSQL ${PYMYSQL:-0.7.11}
 ENV ROBOT_REQUESTS ${ROBOT_REQUESTS:-0.4.6}
+ENV LXML ${LXML:-4.2.1}
 
 WORKDIR /robot
 
@@ -57,6 +58,7 @@ RUN pip install faker==$FAKER
 RUN pip install pymysql==$PYMYSQL
 RUN pip install robotframework-sudslibrary
 RUN pip install robotframework-requests==$ROBOT_REQUESTS
+RUN pip install lxml==$LXML
 
 ENV ORACLE_HOME /opt/oracle/instantclient_12_1
 ENV LD_RUN_PATH=$ORACLE_HOME
