Added urllib3 version library

--- a/robot-selenium/Dockerfile
+++ b/robot-selenium/Dockerfile
@@ -6,6 +6,7 @@ ARG PABOT
 ARG PDFMERGE
 ARG FAKER
 ARG CHROMEDRIVER_VERSION
+ARG URLLIB3
 FROM debian:jessie-slim
 
 RUN apt-get update
@@ -22,6 +23,7 @@ ENV PDFMERGE  ${PDFMERGE:-0.0.7}
 ENV FAKER  ${FAKER:-0.8.11}
 ENV PYMYSQL ${PYMYSQL:-0.7.11}
 ENV ROBOT_REQUESTS ${ROBOT_REQUESTS:-0.4.6}
+ENV URLLIB3 ${URLLIB3:-1.22}
 ENV LXML ${LXML:-4.2.1}
 
 WORKDIR /robot
@@ -59,6 +61,7 @@ RUN pip install pymysql==$PYMYSQL
 RUN pip install robotframework-sudslibrary
 RUN pip install robotframework-requests==$ROBOT_REQUESTS
 RUN pip install lxml==$LXML
+RUN pip install urllib3==$URLLIB3
 
 ENV ORACLE_HOME /opt/oracle/instantclient_12_1
 ENV LD_RUN_PATH=$ORACLE_HOME
