Added copy version-info into cypress image

--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -5,3 +5,5 @@ RUN npm i cypress -g
 RUN npm install mysql -g
 RUN npm install mocha -g
 RUN npm install mochawesome -g
+COPY ./version-info /usr/bin
+RUN chmod +x /usr/bin/version-info
