--- a/.travis.yml
+++ b/.travis.yml
@@ -240,7 +240,7 @@ jobs:
         - IMAGE_NAME: chrome-oracle-py
         - PYTHON_VERSION: 2.7
       script:
-        - ./scripts/build.sh "${DH_REPO}" "${IMAGE_NAME}" PYTHON_VERSION=${PYTHON_VERSION};
+        - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" PYTHON_VERSION=${PYTHON_VERSION};
         - |
           if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
             if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
