--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ notifications:
   email:
     - dev@joeir.net
 stages:
+  - lint
   - publish
   - release
 before_script:
@@ -20,6 +21,22 @@ jobs:
     - stage: publish
       env:
         - IMAGE_NAME: alpine
+      script:
+        - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
+        - |
+          if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
+            if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+            else
+              ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            fi;
+          fi;
+    - stage: lint
+      script:
+        - docker run --rm -i hadolint/hadolint < ./ansible/Dockerfile
+    - stage: publish
+      env:
+        - IMAGE_NAME: ansible
       script:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
         - |
