--- a/.travis.yml
+++ b/.travis.yml
@@ -138,6 +138,20 @@ jobs:
               ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
             fi;
           fi;
+
+    - stage: publish
+        env:
+            - IMAGE_NAME: lighthouse
+        script:
+          - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}";
+          - |
+            if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
+              if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+                ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+              else
+                ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+              fi;
+            fi;
     - stage: publish
       env:
         - IMAGE_NAME: node
