updated instantclient version to 12.2.0.1.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -239,6 +239,7 @@ jobs:
       env:
         - IMAGE_NAME: chrome-oracle-py
         - PYTHON_VERSION: 3.7
+        - ORACLE_VERSION: 12.2.0.1.0
       script:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" PYTHON_VERSION=${PYTHON_VERSION};
         - |
@@ -254,6 +255,7 @@ jobs:
       env:
         - IMAGE_NAME: chrome-oracle-py
         - PYTHON_VERSION: 3.6
+        - ORACLE_VERSION: 12.2.0.1.0
       script:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" PYTHON_VERSION=${PYTHON_VERSION};
         - |
@@ -269,6 +271,7 @@ jobs:
       env:
         - IMAGE_NAME: chrome-oracle-py
         - PYTHON_VERSION: 2.7
+        - ORACLE_VERSION: 12.2.0.1.0
       script:
         - ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" PYTHON_VERSION=${PYTHON_VERSION};
         - |
