--- a/chrome-oracle-py/Dockerfile
+++ b/chrome-oracle-py/Dockerfile
@@ -44,19 +44,23 @@ RUN CHROME_VERSION=$(chrome --version | cut -d. -f-3) \
 # -----------------------------
 # install oracle
 # -----------------------------
-ARG ORACLE_VERSION=12.2.0.1.0
-ENV LD_LIBRARY_PATH=/opt/oracle/${ORACLE_VERSION} \
-    LD_RUN_PATH=$LD_LIBRARY_PATH \
-    ORACLE_VERSION=${ORACLE_VERSION}
+ARG ORACLE_VERSION=12.2.0.1.0 
+ENV ORACLE_VERSION=${ORACLE_VERSION}
+
+ #TODO: make instantclient_12_2 a variable based on ORACLE_VERSION
+ENV LD_LIBRARY_PATH=/opt/oracle/instantclient_12_2 \
+    LD_RUN_PATH=$LD_LIBRARY_PATH 
 
 COPY instantclient/${ORACLE_VERSION}/* /tmp/
 
-RUN apt-get update && apt-get install -y \
+RUN set -x && \
+    apt-get update && apt-get install -y \
     unzip build-essential libssl-dev libffi-dev lib32ncurses5-dev libaio1 && \
     rm -rf /var/lib/apt/lists/* && \
     mkdir -p /opt/oracle && \
     unzip "/tmp/instantclient*.zip" -d /opt/oracle && \
-    ln -s $LD_LIBRARY_PATH/libclntsh.so.${ORACLE_VERSION:0:4} $LD_LIBRARY_PATH/libclntsh.so
+    ln -s "$LD_LIBRARY_PATH/libclntsh.so.12.2" $LD_LIBRARY_PATH/libclntsh.so
+    # ln -s "$LD_LIBRARY_PATH/libclntsh.so.$(echo $ORACLE_VERSION | cut -d. -f-2)" $LD_LIBRARY_PATH/libclntsh.so
 
 # -----------------------------
 # check versions
