--- a/gkecli/Dockerfile
+++ b/gkecli/Dockerfile
@@ -1,9 +1,9 @@
-FROM iron/base:3.4
+FROM alpine:3.10.3
 LABEL maintainer="zephinzer <dev-at-joeir-dot-net>" \
       description="Google Kubernetes Engine deployer image for use in CI pipelines"
 ARG GCLOUD_SDK_VERSION="177.0.0"
 ARG GCLOUD_SDK_URL="https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${GCLOUD_SDK_VERSION}-linux-x86_64.tar.gz"
-ENV APK_DEPENDENCIES="bash curl git jq vim python py-pip make docker" \
+ENV APK_DEPENDENCIES="bash curl git jq vim python3 make docker" \
     PIP_DEPENDENCIES="docker-compose" \
     DIR_INSTALL=/tmp
 ENV DIR_GCLOUD_SDK=${DIR_INSTALL}/google-cloud-sdk
@@ -16,7 +16,7 @@ ENV PATH=${DIR_GCLOUD_SDK}/bin:$PATH \
       /var/cache/misc/*"
 COPY ./version-info /usr/bin/
 RUN apk add --update --upgrade --no-cache ${APK_DEPENDENCIES} \
-    && pip --no-cache-dir install ${PIP_DEPENDENCIES} \
+    && pip3 --no-cache-dir install ${PIP_DEPENDENCIES} \
     && mkdir -p ${DIR_INSTALL} \
     && curl -o ${DIR_INSTALL}/install.sh https://sdk.cloud.google.com \
     && chmod 550 ${DIR_INSTALL}/install.sh \
